--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "codespaces-react",
+  "name": "dclinic-app-v2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "parse": "^3.5.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
